--- a/app/static/app.css
+++ b/app/static/app.css
@@ -397,6 +397,25 @@ p {
   padding: 3px 5px;
 }
 
+.table.table-ip-assets {
+  font-size: 13px;
+}
+
+.table.table-ip-assets th,
+.table.table-ip-assets td {
+  padding: 12px 18px;
+}
+
+.table.table-ip-assets .mono {
+  font-size: 13px;
+}
+
+.table.table-ip-assets .tag {
+  padding: 3px 9px;
+  border-radius: 7px;
+  font-size: 12px;
+}
+
 .table th {
   text-transform: uppercase;
   font-size: 11px;
