--- a/app/templates/partials/ip_assets_table.html
+++ b/app/templates/partials/ip_assets_table.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="table-wrapper">
-      <table class="table">
+      <table class="table table-ip-assets">
         <thead>
           <tr>
             <th>
