--- a/app/templates/partials/ip_assets_table.html
+++ b/app/templates/partials/ip_assets_table.html
@@ -47,9 +47,9 @@
             <th>
               <span class="visually-hidden">Select</span>
             </th>
-            <th>IP address</th>
-            <th>Project</th>
-            <th>Type</th>
+            <th class="col-ip-address">IP address</th>
+            <th class="col-project">Project</th>
+            <th class="col-type">Type</th>
             <th>Tags</th>
             <th>Notes</th>
             <th>Actions</th>
