--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,9 @@
       <a class="nav-link{% if active_nav == 'library' %} nav-link-active{% endif %}" href="/ui/projects">Library</a>
       <a class="nav-link{% if active_nav == 'audit-log' %} nav-link-active{% endif %}" href="/ui/audit-log">Audit Log</a>
       <a class="nav-link{% if active_nav == 'data-ops' %} nav-link-active{% endif %}" href="/ui/import">Data Ops</a>
+      {% if is_superuser %}
+      <a class="nav-link{% if active_nav == 'users' %} nav-link-active{% endif %}" href="/ui/users">Users</a>
+      {% endif %}
     </nav>
     <div class="sidebar-footer">
       <div class="sidebar-account">
