--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,7 @@
       <a class="nav-link{% if active_nav == 'hosts' %} nav-link-active{% endif %}" href="/ui/hosts">Hosts</a>
       <a class="nav-link{% if active_nav == 'ranges' %} nav-link-active{% endif %}" href="/ui/ranges">Ranges</a>
       <a class="nav-link{% if active_nav == 'library' %} nav-link-active{% endif %}" href="/ui/projects">Library</a>
+      <a class="nav-link{% if active_nav == 'connectors' %} nav-link-active{% endif %}" href="/ui/connectors">Connectors</a>
       <a class="nav-link{% if active_nav == 'audit-log' %} nav-link-active{% endif %}" href="/ui/audit-log">Audit Log</a>
       <a class="nav-link{% if active_nav == 'data-ops' %} nav-link-active{% endif %}" href="/ui/import">Data Ops</a>
       {% if is_superuser %}
