--- a/app/templates/partials/connectors_overview_tab_content.html
+++ b/app/templates/partials/connectors_overview_tab_content.html
@@ -22,6 +22,12 @@
           <td>Available</td>
           <td>Open the <a class="link" href="/ui/connectors?tab=vcenter">vCenter tab</a> for command examples.</td>
         </tr>
+        <tr>
+          <td>Prometheus</td>
+          <td>Query-based import</td>
+          <td>Available</td>
+          <td>Open the <a class="link" href="/ui/connectors?tab=prometheus">Prometheus tab</a> to run dry-run/apply imports from PromQL results.</td>
+        </tr>
       </tbody>
     </table>
   </div>
