--- a/app/static/app.css
+++ b/app/static/app.css
@@ -482,6 +482,12 @@ p {
   font-size: 12px;
 }
 
+.table.table-range-addresses .tag {
+  padding: 3px 9px;
+  border-radius: 7px;
+  font-size: 12px;
+}
+
 .table th {
   text-transform: uppercase;
   font-size: 11px;
